--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 height: 230,
                 image_format: 'jpeg',
                 jpeg_quality: 90,
-                constrains : {
+                constraints : {
                     facingMode: 'environment'
                 }
             });
